# simple-program-demo

./: Cargo.toml  README.md  flake.nix
coprocessor-app/: Cargo.toml  README.md
coprocessor-app/crates/circuit/: Cargo.toml
coprocessor-app/crates/circuit/src/: lib.rs
coprocessor-app/crates/controller/src/: lib.rs
src/: lib.rs
src/contracts/Authorization.sol/: Authorization.json
src/contracts/BaseAccount.sol/: BaseAccount.json
src/contracts/ERC1967Proxy.sol/: ERC1967Proxy.json
src/contracts/Forwarder.sol/: Forwarder.json
src/contracts/LiteProcessor.sol/: LiteProcessor.json
src/contracts/MockERC20.sol/: MockERC20.json
src/contracts/SP1VerificationGateway.sol/: SP1VerificationGateway.json
src/types/: mod.rs  sol_types.rs
