[package]
name = "simple_program_demo"
version = "0.0.1"
edition = "2021"

[dependencies]
env_logger                           = "0.10.0"
async-trait                          = "0.1.77"
cosmwasm-std                         = { version = "2.1.3" }
cosmrs                               = { version = "0.21.1" }
serde                                = { version = "1.0.207", default-features = false, features = ["derive"] }
dotenv                               = "0.15"
tokio                                = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
alloy                                = { version = "0.9.2", features = ["full"] }
hex                                  = "0.4.3"
serde_json                           = { version = "1.0.140", default-features = false, features = ["alloc"] }
mmvault                              = { git = "https://github.com/neutron-org/slinky-vault", package = "mmvault" }
sp1-sdk                              = { version = "5.0.0", default-features = false }
bincode                              = "1.3.3"
anyhow                               = "1"
toml                                 = "0.8"
log                                  = { version = "0.4.22" }
valence-domain-clients               = { git = "https://github.com/timewave-computer/valence-domain-clients.git", branch = "main" }
